# Rubiks-Cube-Solver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Content.txt  Fragen fürs Meeting.txt  Todos.txt  compileOptions.txt  distance20shuffles.txt  fiveResults.txt  infos.txt  responseFile.txt  shuffles.txt  shufflesTest.txt  testLog.txt  testShuffles.txt
Phyton Parser/: dsTestLog.txt  fiveLogDs1Dsmd7.txt  fiveResults.txt  parser.py  smallLTLog.txt
src/: CMakeLists.txt  CommandLineHandler.cpp  CommandLineHandler.h  Constants.h  CornerLookupIndex.cpp  Definitions.h  DuplicateState.cpp  DuplicateState.h  DuplicateStateTurnIndex.cpp  EdgeLookupIndex.cpp  EgdeLookupIndex.cpp  FileManagement.cpp  FileManagement.h  IterativeDeepeningAStar.cpp  LookupTable.cpp  LookupTable.h  Main.cpp  PR_IterativeDeepeningAStar.cpp  PerformanceTest.h  PermutationIndexer.cpp  PermutationIndexer.h  RubicsCubePiece.h  RubicsCubeRotater.cpp  RubicsCubeState.cpp  RubicsCubeState.h  RubicsCubeStateShift.h  RubiksCubeSolver.cpp  SR_IterativeDeepeningAStar.cpp  Solver.cpp  Solver.h  StateIndex.h  StateIndexHasher.h  StateIndexReverser.cpp  StateIndexReverser.h  Stopwatch.cpp  Stopwatch.h  Turn.cpp  Turn.h  TurnIndexer.cpp  TurnIndexer.h  (+1 more)
src/DuplicateStateDetection/: DuplicateState.cpp  DuplicateState.h  DuplicateStateTurnIndex.cpp  TurnIndexer.cpp  TurnIndexer.h
src/LookupTable/: CornerLookupIndex.cpp  CornerLookupTable.cpp  E1LookupTable.cpp  E2LookupTable.cpp  EdgeLookupIndex.cpp  EdgeLookupTable.cpp  EdgePermutationLookupTable.cpp  LookupTable.cpp  LookupTable.h  LookupTableGenerator.cpp  LookupTableGenerator.h  StateIndexReverser.cpp  StateIndexReverser.h
src/Model/: RubicsCubePiece.h  RubicsCubeState.cpp  RubicsCubeState.h  RubicsCubeStateShift.h  RubiksCubePiece.h  RubiksCubeRotator.cpp  RubiksCubeState.cpp  RubiksCubeState.h  RubiksCubeStateShift.h  StateIndex.h  StateIndexHasher.h  Turn.cpp  Turn.h
src/Solver/: PR_IterativeDeepeningAStar.cpp  SR_IterativeDeepeningAStar.cpp  Solver.cpp  Solver.h
src/Symmetry/: Symetries.h  Symmetry,cpp  Symmetry.h
src/Utils/: Constants.h  FileManagement.cpp  FileManagement.h  PermutationIndexer.h  Stopwatch.h  StringUtils.cpp  StringUtils.h  utils.h
src/Utils/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.h
